Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-52304

Crash in [QMacAccessibilityElement parentElement]

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.9.0 Alpha
    • 5.6.0
    • None
    • Os X 10.11.4, Qt 5.6.0
    • macOS
    • fafdb171e0c317ee8f871dc7b504d3713d5860eb

    Description

      Trace reconstructed from crash reports from the mac store:

      0   libqcocoa.dylib               	0x0000000109b24dc4 0x109b12000 + 77252 QCocoaWindow::qtView() const (in libqcocoa.dylib) (qcocoawindow.mm:1170)
      1   libqcocoa.dylib               	0x0000000109b44bbb 0x109b12000 + 207803 -[QMacAccessibilityElement parentElement] (in libqcocoa.dylib) (qcocoaaccessibilityelement.mm:234)
      2   libqcocoa.dylib               	0x0000000109b450c3 0x109b12000 + 209091 -[QMacAccessibilityElement accessibilityAttributeValue:] (in libqcocoa.dylib) (qcocoaaccessibilityelement.mm:280)
      3   com.apple.AppKit              	0x00007fff9019b820 NSAccessibilityGetObjectForAttributeUsingLegacyAPI + 392
      4   com.apple.AppKit              	0x00007fff90199e94 _NSAccessibilityEntryPointValueForAttribute + 1879
      5   com.apple.AppKit              	0x00007fff9019b820 NSAccessibilityGetObjectForAttributeUsingLegacyAPI + 392
      6   com.apple.AppKit              	0x00007fff90199e94 _NSAccessibilityEntryPointValueForAttribute + 1879
      7   com.apple.AppKit              	0x00007fff905427ed GetWindow + 413
      8   com.apple.HIServices          	0x00007fff9605a335 _AXXMIGGetWindow + 216
      9   com.apple.HIServices          	0x00007fff9606376f _XGetWindow + 309
      10  com.apple.HIServices          	0x00007fff9603c012 mshMIGPerform + 199
      11  com.apple.CoreFoundation      	0x00007fff87574019 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE1_PERFORM_FUNCTION__ + 41
      12  com.apple.CoreFoundation      	0x00007fff87573f89 __CFRunLoopDoSource1 + 473
      13  com.apple.CoreFoundation      	0x00007fff8756b9bb __CFRunLoopRun + 2171
      14  com.apple.CoreFoundation      	0x00007fff8756aed8 CFRunLoopRunSpecific + 296
      15  com.apple.HIToolbox           	0x00007fff8f9e7935 RunCurrentEventLoopInMode + 235
      16  com.apple.HIToolbox           	0x00007fff8f9e7677 ReceiveNextEventCommon + 184
      17  com.apple.HIToolbox           	0x00007fff8f9e75af _BlockUntilNextEventMatchingListInModeWithFilter + 71
      18  com.apple.AppKit              	0x00007fff90109efa _DPSNextEvent + 1067
      19  com.apple.AppKit              	0x00007fff9010932a -[NSApplication _nextEventMatchingEventMask:untilDate:inMode:dequeue:] + 454
      20  com.apple.AppKit              	0x00007fff900fde84 -[NSApplication run] + 682
      21  libqcocoa.dylib               	0x0000000109b3418f 0x109b12000 + 139663 QCocoaEventDispatcher::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) (in libqcocoa.dylib) (qcocoaeventdispatcher.mm:417)
      22  org.qt-project.QtCore         	0x000000010579f441 QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) + 401
      23  org.qt-project.QtCore         	0x00000001057a3705 QCoreApplication::exec() + 341
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            frederik Frederik Gladhorn
            neil Neil Williams
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes